Integrate RabbitMQ for Asynchronous Email Notifications
- Added RabbitMQ setup for handling notification messages asynchronously.
- Configured a RabbitMQ notification queue and listener to process and send email notifications.
- Implemented the NotificationService to send email notifications via RabbitMQ.
- Created NotificationListener to consume messages from the queue and trigger email sending.
- Added NotificationEmailService to handle the actual email dispatch using JavaMail.
- Tested email functionality with Postman, and validated message queuing with RabbitMQ.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
 spring.application.name=notification-service
 server.port=8081
 
-# Email configuration for notification service
+# Email configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=notificationservice.taskmaster@gmail.com
-spring.mail.password=ymyyzyasprmlgmfp
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
+# MySQL database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/notifications_db
 spring.datasource.username=root
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
@@ -17,3 +18,9 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# RabbitMQ settings
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
