--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,25 +2,28 @@ spring.application.name=notification-service
 server.port=8081
 
 # Email configuration
-spring.mail.host=smtp.gmail.com
+spring.mail.host=
 spring.mail.port=587
 spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.ssl.trust=
 
 # MySQL database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/notifications_db
-spring.datasource.username=root
+# Use 'mysql' as the hostname for MySQL container
+spring.datasource.url=jdbc:mysql://mysql:3306/notifications_db
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+
 # RabbitMQ settings
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
